# MicroFusion

./: .gitignore  CMakeLists.txt  README.md  demo.cpp  main.cpp
micro_fusion/: BaseObject.cpp  CMakeLists.txt  TargetCache.cpp
micro_fusion/assignment/: Assignment.cpp  Assignment.h  KM.h
micro_fusion/feature_extr/: FeatureExtr.cpp  FeatureExtr.h  ONNXInference.cpp  ONNXInference.h
micro_fusion/fusion/: Fusion.cpp  FusionParts.cpp  FusionParts.h  PositionFusion.cpp  PositionFusion.h
micro_fusion/include/: BaseObject.h  Common.h  Feature.h  Fusion.h  MicroFusion.h  Persistent.h  TargetCache.h  Toolkit.h
micro_fusion/persistent/: MapManager.h  PTarget.pb.cc  PTarget.pb.h  PTarget.proto  Persistent.cpp
micro_fusion/persistent/PTarget3012004/: PTarget.pb.cc  PTarget.pb.h
micro_fusion/persistent/PTarget3021012/: PTarget.pb.cc  PTarget.pb.h
